--- a/app/sass/_layouts.sass
+++ b/app/sass/_layouts.sass
@@ -57,7 +57,11 @@
       margin: 0
       padding: 0
     .l-news-page__right
-      display: none
+      // display: none
+      width: auto
+      float: none
+      margin: 0
+      max-width: initial  
 
 .l-news-page__left
   float: left
@@ -68,7 +72,7 @@
   position: relative
   overflow: hidden
   +rmin($bp2)
-    max-height: 601px
+    // max-height: 601px
 
 .l-news-page__right
   float: right
