--- a/app/sass/partials/_article.sass
+++ b/app/sass/partials/_article.sass
@@ -2,13 +2,17 @@
   margin: 0 !important 
   color: #999
   display: block
-  text-align: right
+  text-align: left
   font-size: 10px
 .wp-caption
   width: auto !important
 .article
   font-style: 14px
   line-height: 1.57
+  .article__date
+    font-size: 80%
+    color: #999 
+    margin-top: -15px 
   figure
     img
       width: 100%
@@ -50,14 +54,17 @@
 .article__source
   color: #8a92a1 
   font-style: italic
+  margin-top: 10px 
 .article__title
   margin-bottom: 24px
   +f(r, 18)
   line-height: 1.667
+  font-size: 22px 
 
 .article-head
   position: relative
   margin-bottom: 70px
+  margin-bottom: 40px 
   padding-right: percentage(120/960)
   font-size: 16px
   line-height: 1.625
