--- a/app/sass/partials/_contacts.sass
+++ b/app/sass/partials/_contacts.sass
@@ -16,6 +16,10 @@
 		width: auto
 		img
 			width: 100%
+.contacts__map
+	overflow: hidden
+	padding-right: 30px
+	padding-top: 20px  
 .vacancy-wrapper
 	padding-top: 40px
 .vacancy
