--- a/app/sass/partials/_footer.sass
+++ b/app/sass/partials/_footer.sass
@@ -3,6 +3,7 @@
   table-layout: fixed
   border-spacing: 0
   width: 100%
+  margin-top: 30px 
   &_static
     margin-top: 70px
     .footer__cell
@@ -19,7 +20,7 @@
 
 .footer__cell
   display: table-cell
-  transform: translateY(90%)
+  // transform: translateY(90%)
   transition: transform 0.3s ease
 
 .social-btn
