--- a/app/sass/_layouts.sass
+++ b/app/sass/_layouts.sass
@@ -62,6 +62,7 @@
       float: none
       margin: 0
       max-width: initial  
+      
 
 .l-news-page__left
   float: left
@@ -78,6 +79,7 @@
   float: right
   margin-left: 350px
   max-width: 590px
+  width: 100% 
 
 .l-article
   margin-bottom: 75px
