--- a/app/sass/partials/_footer.sass
+++ b/app/sass/partials/_footer.sass
@@ -67,6 +67,14 @@
 
   &_instagram
     background: #2A5B83
+    
+  &_youtube
+    background: #e2302f 
+    .icon
+      font-size: 31px 
+      position: relative
+      top: -3px 
+  
 
 .social-btn__inner
   position: relative
