--- a/app/sass/partials/_article.sass
+++ b/app/sass/partials/_article.sass
@@ -7,7 +7,7 @@
 .wp-caption
   width: auto !important
 .article
-  font-style: 14px
+  font-size: 14px
   line-height: 1.57
   .article__date
     font-size: 80%
@@ -28,6 +28,25 @@
       margin-top: 0
     &:last-child
       margin-bottom: 0
+  h2
+    font-weight: normal
+    font-size: 22px 
+    color: #1a2a49 
+    margin: 0
+  h3
+    font-weight: bold
+    font-size: 17px  
+    color: #1a2a49 
+    margin: 0 
+  h4
+    font-size: 15px 
+    color: #1a2a49 
+    font-style: italic 
+    font-weight: bold
+  h2,h3,h4
+    &+p
+      margin-top: 4px 
+  
   img
     max-width: 100%
     height: auto !important
