--- a/app/sass/partials/_contacts.sass
+++ b/app/sass/partials/_contacts.sass
@@ -16,6 +16,9 @@
 		width: auto
 		img
 			width: 100%
+.contacts__text
+	p
+		margin-bottom: 1em 
 .contacts__map
 	overflow: hidden
 	padding-right: 30px
@@ -123,6 +126,12 @@ textarea
 			margin-bottom: 12px
 			font-style: 16px
 			display: block
+.contact__info
+	span
+		color: #a1a1a1
+		display: block
+		margin-top: 5px 
+
 .contact
 	margin-top: 50px
 	font-size: 16px
@@ -135,6 +144,8 @@ textarea
 		span
 			color: #a1a1a1
 			text-transform: uppercase
+			display: block
+			margin-top: 5px 
 	ul
 		font-size: 14px
 		margin-top: 35px
@@ -161,7 +172,7 @@ textarea
 .q
 	display: block
 	text-decoration: none
-	padding: 14px 14px 20px 73px
+	padding: 14px 14px 20px 14px
 	position: relative
 	font-size: 14px
 	color: #1a2a49
@@ -180,4 +191,5 @@ textarea
 		+f(l,36)
 		position: absolute
 		left: 14px
+		display: none
 		line-height: 1
